[tool.poetry]
name = "mooseblog"
version = "0.1.0"
description = "Small blog about Moose."
authors = ["b-long <b-long@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.94.1"}
Faker = "^8.16.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.2.0"
pydantic = "^1.9.1"
autopep8 = "^1.6.0"
rope = "^0.20.1"
pylint = "^2.14.5"
pytest-cov = "^2.12.1"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
